# ncrypt-me

./: Cargo.toml  readme.md
src/: credentials.rs  decrypt.rs  encrypt.rs  error.rs  lib.rs
