[package]
name = "ncrypt-me"
authors = ["Michalis Molfetas"]
version = "0.1.0"
edition = "2024"

[dependencies]

# Crypto
chacha20poly1305 = { version = "0.10.1", features = ["getrandom"]}
argon2-sys = "=0.1.0"


# Misc
libc = "0.2.174"
bincode = "2"
zeroize = "1.8.1"
secure-types = {git = "https://github.com/greekfetacheese/secure-types.git", branch = "master"}

# Error
thiserror = "2"