[package]
name = "ncrypt-me"
authors = ["Michalis Molfetas"]
version = "0.1.11"
edition = "2024"
repository = "https://github.com/greekfetacheese/ncrypt-me"
description = "Dead simple encryption library"
readme = "readme.md"
keywords = ["encryption", "secure", "cryptography", "zeroize"]
categories = ["cryptography", "security"]
license = "MIT OR Apache-2.0"

[dependencies]

# Crypto
chacha20poly1305 = { version = "0.10.1", features = ["getrandom"]}
argon2-sys = "=0.1.0"


# Misc
libc = "0.2"
bincode = "2"
zeroize = "1.8.1"
secure-types = "0.1"

# Error
thiserror = "2"