[package]
name = "ncrypt-me"
authors = ["Michalis Molfetas"]
version = "0.1.22"
edition = "2024"
repository = "https://github.com/greekfetacheese/ncrypt-me"
description = "Dead simple encryption library"
readme = "readme.md"
keywords = ["encryption", "secure", "cryptography", "zeroize"]
categories = ["cryptography", "security"]
license = "MIT OR Apache-2.0"

[dependencies]

# Crypto
chacha20poly1305 = { version = "0.10.1", features = ["getrandom"]}
argon2-rs = {version = "0.1.1", features = ["zeroize", "bincode"]}

# Misc
libc = "0.2"
bincode = "2"
zeroize = "1.8.2"
secure-types = "0.2"

# Error
thiserror = "2"